[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.60.0", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_Security"
] }
windows-sys = { version = "0.59.0", features = [] }
shared = { version = "0.1.0", path = "../shared" }