[package]
edition = "2021"
name = "my-dpc-driver"
version = "0.0.0"
description = "A sample WDM driver that demonstrates WDM in RUST"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["windows", "driver", "sample", "example", "wdm"]
categories = ["hardware-support"]
publish = false

[package.metadata.wdk.driver-model]
driver-type = "WDM"

[lib]
crate-type = ["cdylib"]
test = false

[build-dependencies]
glob = "0.3"
cc = "1.0"
wdk-build = { path = "../../ext-crates/windows-drivers-rs-main/crates/wdk-build", version = "0.3.0" }

[dependencies]
wdk = { path = "../../ext-crates/windows-drivers-rs-main/crates/wdk", version = "0.3.0" }
wdk-alloc = { path = "../../ext-crates/windows-drivers-rs-main/crates/wdk-alloc", version = "0.3.0" }
wdk-panic = { path = "../../ext-crates/windows-drivers-rs-main/crates/wdk-panic", version = "0.3.0" }
wdk-sys = { path = "../../ext-crates/windows-drivers-rs-main/crates/wdk-sys",  version = "0.3.0" }

[dependencies.shared]
path = "../shared"
default-features = false
features = ["wdk-panic"]

[features]
default = []
nightly = ["wdk/nightly", "wdk-sys/nightly"]

[profile.dev]
panic = "abort"
lto = true

[profile.release]
panic = "abort"
lto = true